--- a/Iniciar.html
+++ b/Iniciar.html
@@ -23,7 +23,7 @@
                                  
                     </ul>    
             </ul>
-            <p class="iniciar2"><a href="index - copia.html">HOME</a></p></div>        
+            <p class="iniciar2"><a href="index.html">HOME</a></p></div>        
     </nav>
 
    
