--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
 
     <div class="discofrafia1">
         <div class="griddiscografia"> 
-            <div class="a"><img src="IMG/DISCOS/ADD.jpg" height="200px" width="200px"></div> 
-            <div class="b"><img src="IMG/DISCOS/DWS.png" height="200px" width="200px"></div>
-            <div class="c"><img src="IMG/DISCOS/F.jpg" height="200px" width="200px"></div>
-            <div class="d"><img src="IMG/DISCOS/HM.jpg" height="200px" width="200px"></div>
-            <div class="e"><img src="IMG/DISCOS/PHM.jpg" height="200px" width="200px"></div>
-            <div class="d"><img src="IMG/DISCOS/SL.jpg" height="200px" width="200px"></div>
-            <div class="f"><img src="IMG/DISCOS/WT.jpg" height="200px" width="200px"></div>
-            <div class="g"><img src="IMG/DISCOS/YZ.jpg" height="200px" width="200px"></div>
-            <div class="h"><img src="IMG/DISCOS/broken.jpg" height="200px" width="200px"></div>
-            <div class="i"><img src="IMG/DISCOS/ghost.jpg" height="200px" width="200px"></div>
+            <div class="a"><img src="IMG/DISCOS/ADD.jpg" class="disco" alt="IMG ADD VIOLENCE"></div> 
+            <div class="b"><img src="IMG/DISCOS/DWS.png" class="disco"  alt="IMG DOWNWARD SPIRAL"></div>
+            <div class="c"><img src="IMG/DISCOS/F.jpg"  class="disco" alt="IMG FRAGILE"></div>
+            <div class="d"><img src="IMG/DISCOS/HM.jpg" class="disco"  alt="IMG"></div>
+            <div class="e"><img src="IMG/DISCOS/PHM.jpg" class="disco" alt="IMG PRETTY HATE MACHINE"></div>
+            <div class="d"><img src="IMG/DISCOS/SL.jpg" class="disco" al="IMG"></div>
+            <div class="f"><img src="IMG/DISCOS/WT.jpg" class="disco" alt="IMG WITH TEETH"></div>
+            <div class="g"><img src="IMG/DISCOS/YZ.jpg" class="disco" alt="IMG YEAR ZERO"></div>
+            <div class="h"><img src="IMG/DISCOS/broken.jpg" class="disco" alt="IMG BROKEN"></div>
+            <div class="i"><img src="IMG/DISCOS/ghost.jpg" class="disco" alt="IMG GHOST"></div>
     </div></div>
 
   <nav class="musica">
