--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 
     <div class="newspadre">
-        <div class="newstitle"><p class="newsletter">LASTEST NEWS<i class="fas fa-angle-double-right"></i></p></div>
+        <div class="newstitle"><p class="newsletter">LATEST NEWS<i class="fas fa-angle-double-right"></i></p></div>
         <div class="news">
             <div class="news1"></div>
             <div class="news11"><p class="newsletter1"><spam class="tourtex1">NINE INCH NAILS EARN TWO EMMY NOMINATIONS FOR ‘WATCHMEN’</spam><br>
