--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 
     <div class="Mailinglist">
-        <img src="IMG/logo1.png" height="150px">
+        <img src="IMG/logo1.png" class="logo1">
         <h2 class="signup">SIGN UP TO RECEIVE ALL THE LASTEST NINE INCH NAILS NEWS</h2>
         <form action=""> 
             <input type="email" class="iniciars" name="EMAIL" placeholder="EMAIL" required>
